--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
